--- a/src/dlg-goto/package.json
+++ b/src/dlg-goto/package.json
@@ -1,28 +1,24 @@
 {
-  "name": "dlg-goto",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "name": "jsnotepad",
+  "version": "0.0.1",
+  "description": "Windows 记事本网页版",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  b-clean": "^1.1.0"u
-    "grunt-contrib-concat": "^1.0.1",
-    "grunt-contrib-copy": "^1.0.0",
-    "grunt-contrib-csslint": "^2.0.0",
-    "grunt-contrib-cssmin": "^2.2.1",
-    "grunt-contrib-htmlmin": "^2.4.0",
-    "grunt-contrib-imagemin": "^2.0.1",
-    "grunt-contrib-uglify": "^3.3.0",
-    "grunt-eslint": "^21.0.0",
-    "grunt-htmlhint": "^0.9.13",
-    "grunt-usemin": "^3.1.1"},
-  uauthor": "",
-  "license": "ISC",
+    "test": "grunt lint",
+    "build": "grunt build"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/wangding/jsnotepad.git"
+  },
+  "author": "wangding",
+  "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/wangding/jsnotepad/issues"
+  },
+  "homepage": "https://github.com/wangding/jsnotepad#readme",
   "devDependencies": {
-    
-  u
-
-  b-clean": "^1.1.0",
+    "grunt": "^1.0.1",
+    "grunt-contrib-clean": "^1.1.0",
     "grunt-contrib-concat": "^1.0.1",
     "grunt-contrib-copy": "^1.0.0",
     "grunt-contrib-csslint": "^2.0.0",
@@ -32,5 +28,6 @@
     "grunt-contrib-uglify": "^3.3.0",
     "grunt-eslint": "^21.0.0",
     "grunt-htmlhint": "^0.9.13",
-    "grunt-usemin": "^3.1.1"}
-u
+    "grunt-usemin": "^3.1.1"
+  }
+}
